--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ img {
 }
 p {
 	color: white;
-	text-shadow: 0px 0px 50px;
+	text-shadow: #8a6dff 5px 5px 10px;
 }
 .content {
 	position: relative;
